src/objects/Example_Object__c.object
<CustomObject>
    <description>For dev testing a custom object mapping.</description>
    <fields>
        <fullName>BookingBugId__c</fullName>
        <externalId>true</externalId>
        <label>BookingBugId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Booking_title__c</fullName>
        <description>what will be mapped to booking full_describe</description>
        <label>Booking title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Appt__c</fullName>
        <label>Date of Appt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Just_Date__c</fullName>
        <description>will be mapped to just_date</description>
        <label>Just Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>will be mapped to just_time</description>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <label>Example Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Example Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Example Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>